<resources>
    <string name="app_name">calculadora_De_Imc</string>
    <string name="altura">Altura</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="cm">Cm</string>
    <string name="peso">Peso</string>
    <string name="_00">00</string>
    <string name="idade">Idade</string>
    <string name="_60">60</string>
    <string name="_00_0">00.0</string>
    <string name="calcular_novamente">Calcular Novamente</string>
    <string name="_15">15</string>
    <string name="seu_imc">Seu IMC é:</string>
    <string name="_00_0_">00.0</string>
    <string name="normal">Normal</string>
    <string name="_calcular_novamente">Calcular Novamente</string>
    <string name="muito_a_baixo_do_peso">Muito a baixo do peso</string>
    <string name="abaixo_do_peso">Abaixo do peso</string>
    <string name="normal_">Normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidade_grau_i">Obesidade Grau I</string>
    <string name="obesidade_grauii">Obesidade grauII</string>
    <string name="obesidade_grau_iii">Obesidade Grau III</string>
    <string name="obesidade_grau_ii">Obesidade Grau II</string>
    <string name="_16_0_16_9">16.0 - 16.9</string>
    <string name="_35_0_39_9">35.0 - 39.9</string>
    <string name="_30_0_34_9">30.0 - 34.9</string>
    <string name="_25_0_29_9">25.0 - 29.9</string>
    <string name="_18_5_24_9">18.5 - 24.9</string>
    <string name="_17_0_18_4">17.0 - 18.4</string>
    <string name="muito_abaixo_do_peso">Muito abaixo do peso</string>
    <string name="_16_0_16_9_">16.0 - 16.9</string>
    <string name="ball">ball</string>
    <string name="_40">40+</string>
    <string name="yellowball">yellowBall</string>
    <string name="yellowball_">yellowBall</string>
    <string name="greenball">greenBall</string>
    <string name="babyblueball">babyBlueBall</string>
    <string name="blueball">blueBall</string>
    <string name="peso_muito_baixo">Peso muito baixo</string>
    <string name="botao_sair">botao_sair</string>
    <string name="baby_orangeball">baby_orangeball</string>
    <string name="orangeball">orangeBall</string>
    <string name="redball">redBall</string>
    <string name="peso_muito_baixo_">Peso muito baixo</string>
    <string name="mulher">Mulher</string>
    <string name="homem">homem</string>
</resources>