<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:background="#1e1d1d">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sair"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sair"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/cardbackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/seu_imc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_00_0_"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/normal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/cardbackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/balll_blue"
                    android:contentDescription="TODO"
                    tools:ignore="ImageContrastCheck" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/muito_abaixo_do_peso"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_16_0_16_9_"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ball_baby_blue" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/abaixo_do_peso"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_17_0_18_4"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ball_green" />


                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/normal_"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_18_5_24_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ball_yellow" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sobrepeso"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_25_0_29_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ball_baby_oranje" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_i"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_30_0_34_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ball_oranje" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_ii"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/_35_0_39_9"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ball_red" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/obesidade_grau_iii"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="40+"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>