<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1d1d"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/centerHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />


    <RelativeLayout
        android:id="@+id/centerVerticalLine"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/alturaCase"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerHorizontalLine"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/cardbackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/altura"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/Tamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="000"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/Tamanho"
            android:text="@string/cm"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <SeekBar
            android:id="@+id/sneekBarAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:max="220"
            android:min="60"
            android:progress="0"
            android:progressTint="#002AFF">

        </SeekBar>


    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/calcular_imc"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/idade"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/alturaCase"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:background="@drawable/cardbackground">

        <TextView
            android:id="@+id/textpeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/peso"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/contPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/_60"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/maisemenos">

            <ImageView
                android:id="@+id/maisPeso"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/maisemenos">

            <ImageView
                android:id="@+id/menosPeso"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/peso"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/alturaCase"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/cardbackground">

        <TextView
            android:id="@+id/textIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/idade"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/contIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/_15"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/maisemenos">

            <ImageView
                android:id="@+id/maisIdade"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/maisemenos">

            <ImageView
                android:id="@+id/menosIdade"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus" />

        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/alturaCase"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:text="@string/homem"
        android:background="@drawable/card_homem" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/alturaCase"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_mulher"
        android:backgroundTint="@color/white"
        android:text="@string/mulher" />

</RelativeLayout>